fix: chat key not visible in solo mode

--- a/src/public/templates/menu/home-tab/home-tab.styles.scss
+++ b/src/public/templates/menu/home-tab/home-tab.styles.scss
@@ -28,7 +28,7 @@
     display: block;
     width: 100%;
     line-height: 1rem;
-    font-size: 1rem;
+    font-size: 1.25rem;
     text-transform: uppercase;
     text-align: right;
   }
